Fix unfocus-button blocking visibility of attribute side bar

--- a/visualization/app/codeCharta/ui/unfocusButton/unfocusButton.component.scss
+++ b/visualization/app/codeCharta/ui/unfocusButton/unfocusButton.component.scss
@@ -1,12 +1,13 @@
 unfocus-button-component {
-	#unfocus-button {
-		position: absolute;
-		top: 200px;
-		right: 40px;
-		z-index: 60;
+	position: absolute;
+	top: 200px;
+	right: 40px;
+	z-index: 60;
+
+	.md-button {
 		width: 100px !important;
 		padding-left: 10px;
 		padding-right: 10px;
-		border-radius: 100px;
+		border-radius: 100px !important;
 	}
 }
